@@ -1,3 +1,8 @@
+2002-06-06  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* merge.c: Include libiberty.h.
+	* elf-strtab.c: Include libiberty.h.
+
 2002-06-06  Elias Athanasopoulos  <eathan@otenet.gr>
 
 	* peXXigen.c (pe_print_idata): Remove unused variable.
